# ChangeLog for app-arch/pbzip2
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-arch/pbzip2/ChangeLog,v 1.42 2007/11/27 14:28:12 armin76 Exp $

  27 Nov 2007; Raúl Porcel <armin76@gentoo.org> pbzip2-1.0.2.ebuild:
  alpha/ia64/sparc stable wrt #198599

  25 Nov 2007; Markus Rothe <corsair@gentoo.org> pbzip2-1.0.2.ebuild:
  Stable on ppc64; bug #198599

  24 Nov 2007; Samuli Suominen <drac@gentoo.org> pbzip2-1.0.2.ebuild:
  amd64 stable wrt #198599

  24 Nov 2007; Dawid Węgliński <cla@gentoo.org> pbzip2-1.0.2.ebuild:
  Stable on x86 (bug #198599)

  24 Nov 2007; Jeroen Roovers <jer@gentoo.org> pbzip2-1.0.2.ebuild:
  Stable for HPPA (bug #198599).

  24 Nov 2007; nixnut <nixnut@gentoo.org> pbzip2-1.0.2.ebuild:
  Stable on ppc wrt bug 198599

  24 Nov 2007; Fabian Groffen <grobian@gentoo.org> pbzip2-1.0.1.ebuild,
  pbzip2-1.0.2.ebuild:
  Dropped ppc-macos keyword, see you in prefix

*pbzip2-1.0.2 (31 Jul 2007)

  31 Jul 2007; Chris Gianelloni <wolf31o2@gentoo.org> -pbzip2-0.9.5.ebuild,
  -pbzip2-0.9.6.ebuild, +pbzip2-1.0.2.ebuild:
  Version bump to 1.0.2 and removing older versions.  Closing bug #186640.

  13 Apr 2007; Chris Gianelloni <wolf31o2@gentoo.org> pbzip2-0.9.6.ebuild,
  pbzip2-1.0.1.ebuild:
  Added inherit multilib and closing bug #173403.

*pbzip2-1.0.1 (03 Apr 2007)

  03 Apr 2007; Chris Gianelloni <wolf31o2@gentoo.org> +pbzip2-1.0.1.ebuild:
  Version bump and closing bug #171737.

  04 Sep 2006; Joshua Kinard <kumba@gentoo.org> pbzip2-0.9.6.ebuild:
  Marked stable on mips.

  16 Aug 2006; Markus Rothe <corsair@gentoo.org> pbzip2-0.9.6.ebuild:
  Stable on ppc64

  09 Aug 2006; Jeroen Roovers <jer@gentoo.org> pbzip2-0.9.6.ebuild:
  Stable for HPPA.

  27 Jul 2006; Chris Gianelloni <wolf31o2@gentoo.org> pbzip2-0.9.6.ebuild:
  Marking stable on amd64 and x86.

  22 Jul 2006; Thomas Cort <tcort@gentoo.org> pbzip2-0.9.6.ebuild:
  Stable on alpha.
