@@ -1,0 +1,39 @@
+# Copyright 1999-2008 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/app-arch/pbzip2/pbzip2-1.0.2-r1.ebuild,v 1.1 2008/06/28 08:54:08 wolf31o2 Exp $
+
+EAPI="prefix"
+
+inherit multilib
+
+DESCRIPTION="A parallel version of BZIP2"
+HOMEPAGE="http://compression.ca/pbzip2/"
+SRC_URI="http://compression.ca/${PN}/${P}.tar.gz"
+
+LICENSE="PBZIP2"
+SLOT="0"
+KEYWORDS="~amd64-linux ~x86-linux ~ppc-macos"
+IUSE="static"
+
+DEPEND="app-arch/bzip2"
+
+src_unpack() {
+	unpack ${A}
+	sed -i -e 's:-O3:${CFLAGS}:g' ${P}/Makefile || die
+}
+
+src_compile() {
+	if use static ; then
+		cp -f "${EPREFIX}"/usr/$(get_libdir)/libbz2.a "${S}"
+		emake pbzip2-static || die "Failed to build"
+	else
+		emake pbzip2 || die "Failed to build"
+	fi
+}
+
+src_install() {
+	dobin pbzip2 || die "Failed to install"
+	dodoc AUTHORS ChangeLog README
+	doman pbzip2.1 || die "Failed to install man page"
+	dosym /usr/bin/pbzip2 /usr/bin/pbunzip2
+}
